Add some sign_in tests
